@@ -45,11 +45,13 @@ rescale.result=FALSE, verbose=FALSE) {
 		stop("'s' must contain a column named 'id' ", call.=FALSE)
 	
 	
-	# iterate over profiles and copmute percent missing data
+	## TODO: put this into its own function
+	## TODO: weight result using horizon thickness
+	# iterate over profiles and compute percent missing data by variable
 	pct_missing <- ddply(s, 'id', .fun=function(i, v=vars) {
-	  # iterater over requested variables
-	  # compute percent missing by profile
-	  p <- round(sapply(i[, v], function(j) length(which(is.na(j)))) / nrow(i) * 100)
+		# only evaluate missing data within horizons that aren't completly NA (Oi, Cr, R horizons)
+		cc <- which( ! apply(sapply(i[, v], is.na), 1, all))
+		round(sapply(i[cc, v], function(j) length(which(is.na(j)))) / nrow(i) * 100)
 	})
   
 	# keep track of profiles missing any or all of their data
